Super Battleship INI
Created Super Battleship INI
Create new folder for Custom units
Move Tengu INI to new folder

--- a/INI/Map Code/Custom Units/super battleship.ini
+++ b/INI/Map Code/Custom Units/super battleship.ini
@@ -1,90 +1,36 @@
-[General]
-TeamRetaliate=no
+;-demo:[SuperWeaponTypes]7382=BattleshipSpecial
+;-demo:[BattleshipSpecial]UIName=NOSTR:Super Battleship
+;-demo:[BattleshipSpecial]Name=Unit Deliver
+;-demo:[BattleshipSpecial]IsPowered=no
+;-demo:[BattleshipSpecial]RechargeTime=0.01
+;-demo:[BattleshipSpecial]Type=UnitDelivery
+;-demo:[BattleshipSpecial]Action=Custom
+;-demo:[BattleshipSpecial]SidebarPCX=hcrsicon.pcx
+;-demo:[BattleshipSpecial]ShowTimer=no
+;-demo:[BattleshipSpecial]DisableableFromShell=no
+;-demo:[BattleshipSpecial]Range=1.5
+;-demo:[BattleshipSpecial]LineMultiplier=0
+;-demo:[BattleshipSpecial]Cursor=WarpIn
+;-demo:[BattleshipSpecial]NoCursor=NoWarpIn
+;-demo:[BattleshipSpecial]EVA.Ready=EVA_ReinforcementsReady
+;-demo:[BattleshipSpecial]SW.RequiresTarget=none
+;-demo:[BattleshipSpecial]SW.Animation=CHRONOTG
+;-demo:[BattleshipSpecial]SW.AnimationHeight=1
+;-demo:[BattleshipSpecial]SW.Sound=ChronosphereMoveQuiet
+;-demo:[BattleshipSpecial]SW.FireIntoShroud=no
+;-demo:[BattleshipSpecial]SW.AITargeting=none
+;-demo:[BattleshipSpecial]Deliver.Types=S_HCRUIS,S_HCRUIS,ZEP
+;-demo:[BattleshipSpecial]SW.CreateRadarEvent=no
+;-demo:[BattleshipSpecial]FlashSidebarTabFrames=0
+;-demo:[BattleshipSpecial]SW.AlwaysGranted=yes
 
-[GAAIRC]
-Spyable=yes
-
-[NARADR]
-Spyable=yes
-
-[YAPSIS]
-Spyable=yes
-
-[FACYBR]
-Spyable=yes
-
-[GAOREP]
-Spyable=yes
-
-[NAINDP]
-Spyable=yes
-
-[NACLON]
-Spyable=yes
-
-[FAREPR]
-Spyable=yes
-
-[GADEPO]
-SuperWeapons=ArsenalMedicSpawn
-
-[GACNST]
-SpySat=yes
-Power=233333
-Radar=yes
-
-[NACNST]
-SpySat=yes
-Power=233333
-Radar=yes
-
-[YACNST]
-SpySat=yes
-Power=233333
-Radar=yes
-
-[FACNST]
-SpySat=yes
-Power=233333
-Radar=yes
-
-[SuperWeaponTypes]
-10001=DeliverySpecial
-10002=DeliverySpecial2
-10003=BattleshipSpecial
-
-[DeliverySpecial]
-UIName=NOSTR:TEST DELIVERY
-Name=Unit Deliver
-IsPowered=no
-RechargeTime=0.01
-Type=UnitDelivery
-Action=Custom
-SidebarPCX=apocicon.pcx
-ShowTimer=no
-DisableableFromShell=no
-Range=1.5
-LineMultiplier=0
-Cursor=WarpIn
-NoCursor=NoWarpIn
-EVA.Ready=EVA_ReinforcementsReady
-SW.RequiresTarget=none
-SW.Animation=CHRONOTG
-SW.AnimationHeight=1
-SW.Sound=ChronosphereMoveQuiet
-SW.FireIntoShroud=no
-SW.AITargeting=none
-Deliver.Types=MAMM,MAMM,MAMM,MAMM,MAMM
-SW.CreateRadarEvent=no
-FlashSidebarTabFrames=0
-SW.AlwaysGranted=yes
 
 [VehicleTypes]
-10001=S_HCRUIS
+39014=S_HCRUIS
 
 [WeaponTypes]
-10001=SuperCruiserCannon
-10002=SuperCruiserAA
+49201=SuperCruiserCannon
+49010=SuperCruiserAA
 
 [SuperCruiserAA]
 Damage=30
@@ -103,7 +49,7 @@ Bright=no
 Ammo=0
 
 [Warheads]
-10001=SuperCruiserWH
+12356=SuperCruiserWH
 
 [SuperCruiserCannon]
 Damage=135
@@ -169,6 +115,7 @@ CrateGoodie=no
 Owner=Europeans,UnitedStates,Pacific
 AllowedToStartInMultiplayer=no
 BurstDelay0=10
+
 Cost=28000
 Soylent=14000
 Bounty.Value=7000
@@ -236,30 +183,3 @@ Versus.s_boss=0%
 
 [Cryobeam6WH]
 Versus.s_boss=0%
-
-[BattleshipSpecial]
-UIName=NOSTR:Super Battleship
-Name=Unit Deliver
-IsPowered=no
-RechargeTime=0.01
-Type=UnitDelivery
-Action=Custom
-SidebarPCX=hcrsicon.pcx
-ShowTimer=no
-DisableableFromShell=no
-Range=1.5
-LineMultiplier=0
-Cursor=WarpIn
-NoCursor=NoWarpIn
-EVA.Ready=EVA_ReinforcementsReady
-SW.RequiresTarget=none
-SW.Animation=CHRONOTG
-SW.AnimationHeight=1
-SW.Sound=ChronosphereMoveQuiet
-SW.FireIntoShroud=no
-SW.AITargeting=none
-Deliver.Types=S_HCRUIS,S_HCRUIS,ZEP
-SW.CreateRadarEvent=no
-FlashSidebarTabFrames=0
-SW.AlwaysGranted=yes
-
