--- a/.gitignore
+++ b/.gitignore
@@ -2081,3 +2081,4 @@ debug/snapshot-20210103-035209/except.txt
 debug/snapshot-20210104-083922/except.txt
 debug/snapshot-20210104-084025/except.txt
 Screenshots/SCRN.20210106-102314-00982.png
+Client/.dxfail
