--- a/INI/Map Code/Tweak Module/weird.ini
+++ b/INI/Map Code/Tweak Module/weird.ini
@@ -55,8 +55,14 @@ DeploySound=ConstructionYardDeploy
 
 [FTHQ]
 Image=FAHQ
-Name=SteinsTech Spectral Tower
+Name=Fxxking Tower
 UIName=Name:FTHQ
+Primary=SiegfriedCannon
+ElitePrimary=SiegfriedCannonE
+Secondary=AeroblazeLaser
+EliteSecondary=AeroblazeLaserE
+VeteranAbilities=STRONGER
+EliteAbilities=SELF_HEAL,FIREPOWER
 BuildupTime=.12
 SellTime=.12
 TechLevel=-1
