--- a/INI/Map Code/Tweak Module/weird.ini
+++ b/INI/Map Code/Tweak Module/weird.ini
@@ -2,7 +2,8 @@
 UIName=Name:AMWC
 Name=Tek Turret
 Prerequisite=GAWEAP,GATECH
-Strength=1000
+Owner=Europeans,UnitedStates,Pacific
+Strength=2000
 ProtectedDriver=yes
 Category=Support
 Armor=mcv
@@ -10,7 +11,7 @@ IsTilter=yes
 TooBigToFitUnderBridge=false
 TechLevel=8
 Sight=10
-Speed=4
+Speed=5
 CrateGoodie=no
 Crusher=yes
 Cost=2000
@@ -57,20 +58,22 @@ DeploySound=ConstructionYardDeploy
 Image=FAHQ
 Name=Fxxking Tower
 UIName=Name:FTHQ
-Primary=SiegfriedCannon
-ElitePrimary=SiegfriedCannonE
+Primary=FTShot
+ElitePrimary=FTShotE
 Secondary=AeroblazeLaser
 EliteSecondary=AeroblazeLaserE
 VeteranAbilities=STRONGER
 EliteAbilities=SELF_HEAL,FIREPOWER
+AttachEffect.Duration=-1
+AttachEffect.ROFMultiplier=0.5
 BuildupTime=.12
 SellTime=.12
 TechLevel=-1
-Strength=1000
+Strength=2000
 Adjacent=2
 Points=60
 Sight=6
-Armor=passif_b
+Armor=concrete_b
 Explosion=TWLT070,S_BANG48,S_BRNL58,S_CLSN58,S_TUMU60,FLAMEGUY
 DebrisAnims=DBRIS1LG,DBRIS1SM,DBRIS2LG,DBRIS4LG,DBRIS4SM,DBRIS5LG,DBRIS5SM,DBRIS6LG,DBRIS6SM,DBRIS7LG
 MaxDebris=9
@@ -86,3 +89,36 @@ AmbientSound=FutureTechHQLoop
 Chronoshift.Allow=no
 UndeploysInto=AMWC
 DeploySound=ConstructionYardUndeploy
+
+[FTShot]
+Damage=150
+ROF=25
+Range=20
+Speed=100
+Projectile=InvisibleHigh
+Warhead=ParadoxPrismWH
+LaserOuterSpread=255,255,255
+LaserInnerSpread=255,255,255
+LaserOuterColor=123,123,123
+LaserInnerColor=123,123,123
+LaserDuration=25
+IsLaser=true
+IsHouseColor=false
+Report=ParadoxPrismAttack
+
+
+[FTShotE]
+Damage=200
+ROF=20
+Range=22
+Speed=100
+Projectile=InvisibleHigh
+Warhead=ParadoxPrismWH
+LaserOuterSpread=255,255,255
+LaserInnerSpread=255,255,255
+LaserOuterColor=123,123,123
+LaserInnerColor=123,123,123
+LaserDuration=25
+IsLaser=true
+IsHouseColor=false
+Report=ParadoxPrismAttack
