--- a/INI/Map Code/Custom Units/tengu.ini
+++ b/INI/Map Code/Custom Units/tengu.ini
@@ -1,11 +1,11 @@
 ;-demo:[SuperWeaponTypes]4536=TenguDeliverySpecial
-;-demo:[TenguDeliverySpecial]UIName=NOSTR:TEST DELIVERY
+;-demo:[TenguDeliverySpecial]UIName=NOSTR:Tengu Delivery
 ;-demo:[TenguDeliverySpecial]Name=Unit Deliver
 ;-demo:[TenguDeliverySpecial]IsPowered=no
 ;-demo:[TenguDeliverySpecial]RechargeTime=0.01
 ;-demo:[TenguDeliverySpecial]Type=UnitDelivery
 ;-demo:[TenguDeliverySpecial]Action=Custom
-;-demo:[TenguDeliverySpecial]SidebarPCX=apocicon.pcx
+;-demo:[TenguDeliverySpecial]SidebarPCX=hskricon.pcx
 ;-demo:[TenguDeliverySpecial]ShowTimer=no
 ;-demo:[TenguDeliverySpecial]DisableableFromShell=no
 ;-demo:[TenguDeliverySpecial]Range=1.5
