--- a/INI/Map Code/base code.ini
+++ b/INI/Map Code/base code.ini
@@ -22,6 +22,7 @@ Radar=yes
 4999=DeliverySpecial
 5000=DeliverySpecial2
 
+
 [DeliverySpecial]
 UIName=NOSTR:TEST DELIVERY
 Name=Unit Deliver
@@ -43,7 +44,7 @@ SW.AnimationHeight=1
 SW.Sound=ChronosphereMoveQuiet
 SW.FireIntoShroud=no
 SW.AITargeting=none
-Deliver.Types=MAMM,MAMM,MAMM,MAMM,MAMM
+Deliver.Types=LIBRA_2,EUREKA_2,VOLKOV_2,ASSN_2,SIEG_2,ARMR_2
 SW.CreateRadarEvent=no
 FlashSidebarTabFrames=0
 SW.AlwaysGranted=yes
