--- a/INI/Map Code/Test Mode.ini
+++ b/INI/Map Code/Test Mode.ini
@@ -6253,3 +6253,128 @@ AnimList=CONFLARE
 AffectsAllies=no
 AffectsEnemies=yes
 
+
+[AMWC]
+UIName=NOSTR:Tek Turret Deliever
+Name=Tek Turret Car
+Prerequisite=GAWEAP
+Owner=Europeans,UnitedStates,Pacific
+Strength=2000
+ProtectedDriver=yes
+Category=Support
+Armor=mcv
+IsTilter=yes
+TooBigToFitUnderBridge=false
+TechLevel=4
+Sight=10
+Speed=5
+CrateGoodie=no
+Crusher=yes
+Cost=2000
+Soylent=100
+Bounty.Value=50
+Bounty=yes
+Bounty.Display=yes
+Points=15
+ROT=5
+Turret=no
+Insignificant=yes
+IsSelectableCombatant=no
+AllowedToStartInMultiplayer=no
+Explosion=TWLT070,S_BANG48,S_BRNL58,S_CLSN58,S_TUMU60
+VoiceSelect=CivAllSelect
+VoiceMove=CivAllMove
+VoiceAttack=CivAllAttackCommand
+VoiceSpecialAttack=CivAllMove
+DieSound=GenVehicleDie
+MoveSound=CarMoveStart
+CrushSound=TankCrush
+Locomotor={4A582741-9839-11d1-B709-00A024DDAFD1}
+MovementZone=Normal
+ThreatPosed=10	
+DamageParticleSystems=SparkSys,SmallGreySSys
+Weight=2
+Accelerates=true
+SlowdownDistance=1
+AccelerationFactor=1
+DeaccelerationFactor=0
+ZFudgeColumn=8
+ZFudgeTunnel=13
+Size=3
+CanBeReversed=no
+EMP.Threshold=no
+Insignia.Veteran=dummy
+Insignia.Elite=dummy
+Trainable=no
+ImmuneToAbduction=yes
+DeploysInto=FTHQ
+DeploySound=ConstructionYardDeploy
+
+[FTHQ]
+Image=FAHQ
+Name=Fxxking Tower
+UIName=NOSTR:Tek Turret
+Primary=FTShot
+ElitePrimary=FTShotE
+Secondary=AeroblazeLaser
+EliteSecondary=AeroblazeLaserE
+VeteranAbilities=STRONGER
+EliteAbilities=SELF_HEAL,FIREPOWER
+AttachEffect.Duration=-1
+AttachEffect.ROFMultiplier=0.5
+BuildupTime=.12
+SellTime=.12
+TechLevel=-1
+Strength=2000
+Adjacent=2
+Points=60
+Sight=6
+Armor=concrete_b
+Explosion=TWLT070,S_BANG48,S_BRNL58,S_CLSN58,S_TUMU60,FLAMEGUY
+DebrisAnims=DBRIS1LG,DBRIS1SM,DBRIS2LG,DBRIS4LG,DBRIS4SM,DBRIS5LG,DBRIS5SM,DBRIS6LG,DBRIS6SM,DBRIS7LG
+MaxDebris=9
+MaxDebris=5
+Power=0
+Nominal=yes
+HalfDamageSmokeLocation1=0,0,0
+DamageSmokeOffset=410, 100, 165
+ThreatPosed=0
+Crewed=no
+Spyable=no
+AmbientSound=FutureTechHQLoop
+Chronoshift.Allow=no
+UndeploysInto=AMWC
+DeploySound=ConstructionYardUndeploy
+
+[FTShot]
+Damage=150
+ROF=25
+Range=20
+Speed=100
+Projectile=InvisibleHigh
+Warhead=ParadoxPrismWH
+LaserOuterSpread=255,255,255
+LaserInnerSpread=255,255,255
+LaserOuterColor=123,123,123
+LaserInnerColor=123,123,123
+LaserDuration=25
+IsLaser=true
+IsHouseColor=false
+Report=ParadoxPrismAttack
+
+
+[FTShotE]
+Damage=200
+ROF=20
+Range=22
+Speed=100
+Projectile=InvisibleHigh
+Warhead=ParadoxPrismWH
+LaserOuterSpread=255,255,255
+LaserInnerSpread=255,255,255
+LaserOuterColor=123,123,123
+LaserInnerColor=123,123,123
+LaserDuration=25
+IsLaser=true
+IsHouseColor=false
+Report=ParadoxPrismAttack
