--- a/INI/Map Code/Test Mode.ini
+++ b/INI/Map Code/Test Mode.ini
@@ -87,7 +87,7 @@ SW.AnimationHeight=1
 SW.Sound=ChronosphereMoveQuiet
 SW.FireIntoShroud=no
 SW.AITargeting=none
-Deliver.Types=LIBRA_2,EUREKA_2,VOLKOV_2,ASSN_2,SIEG_2,ARMR_2
+Deliver.Types=LIBRA_2,EUREKA_2,VOLKOV_2,ASSN_2,SIEG_2,ARMR_2,ZEP,SENT
 SW.CreateRadarEvent=no
 FlashSidebarTabFrames=0
 SW.AlwaysGranted=yes
