--- a/.gitignore
+++ b/.gitignore
@@ -2082,3 +2082,5 @@ debug/snapshot-20210104-083922/except.txt
 debug/snapshot-20210104-084025/except.txt
 Screenshots/SCRN.20210106-102314-00982.png
 Client/.dxfail
+debug/snapshot-20210123-030959/except.txt
+Client/ClientCrashLogs/ClientCrashLog_2021_01_17_07_34.txt
