Some Support Power Added
Ally and Soviet support power added

--- a/INI/Map Code/Test Mode.ini
+++ b/INI/Map Code/Test Mode.ini
@@ -41,7 +41,7 @@ Power=233333
 Radar=yes
 Primary=BackwarpCluster
 EMPulseCannon=yes
-SuperWeapon=GearOverchargeSpecial
+SuperWeapon=EliteReservesSpecial
 
 [YACNST]
 SpySat=yes
@@ -62,9 +62,8 @@ EMPulseCannon=yes
 10002=DeliverySpecial2
 10003=UltraShieldSpecial
 10004=SuperForceShieldSpecial
-10005=GearOverchargeSpecial
-10006=ZephyrDeliverySpecial
-10007=BattleshipSpecial
+10005=ZephyrDeliverySpecial
+10006=BattleshipSpecial
 
 [DeliverySpecial]
 UIName=NOSTR:TEST DELIVERY
@@ -87,7 +86,7 @@ SW.AnimationHeight=1
 SW.Sound=ChronosphereMoveQuiet
 SW.FireIntoShroud=no
 SW.AITargeting=none
-Deliver.Types=LIBRA_2,EUREKA_2,VOLKOV_2,ASSN_2,SIEG_2,ARMR_2,ZEP,SENT
+Deliver.Types=LIBRA_2,EUREKA_2,VOLKOV_2,ASSN_2,SIEG_2,ARMR_2
 SW.CreateRadarEvent=no
 FlashSidebarTabFrames=0
 SW.AlwaysGranted=yes
@@ -430,7 +429,6 @@ SW.VirtualCharge=yes
 
 [BuildingTypes]
 10001=F_G
-10002=G_G
 
 [F_G]
 Image=FAKEKILL
@@ -576,73 +574,6 @@ AttachEffect.Duration=300
 AttachEffect.Animation=FORCSHLD
 AttachEffect.PenetratesIronCurtain=yes
 
-[GearOverchargeSpecial]
-UIName=NAME:GearChange
-Name=Elite Reserves
-IsPowered=true
-RechargeTime=6
-Money.Amount=0
-Type=UnitDelivery
-Action=Custom
-ShowTimer=no
-SidebarPCX=ersvicon.pcx
-DisableableFromShell=no
-Range=0
-EVA.Ready=EVA_BattlePowerReady
-SW.UseAITargeting=yes
-SW.AITargeting=Self
-SW.CreateRadarEvent=no
-SW.ActivationSound=ReservesStart
-SW.Deferment=0
-Deliver.Types=G_G,G_G,G_G,G_G
-FlashSidebarTabFrames=0
-Text.Ready=NAME:ACTIVATE
-
-[G_G]
-Image=FAKEKILL
-WeaponsFactory=yes
-Factory=UnitType
-DeployFacing=2
-BuildupTime=.01
-IsPassable=no
-UIName=Name:DUMMYDUMMY
-Name=Fake Elite Reserves (Do Not Use)
-BuildCat=Combat
-Strength=1400
-Armor=killself
-TechLevel=11
-Adjacent=0
-Sight=0
-Owner=PsiCorps
-IronCurtain.Modifier=0
-ForceShield.Modifier=0
-AIBuildThis=no
-Points=0
-Power=0
-Crewed=no
-Capturable=false
-Overpowerable=false
-Explosion=DUMMY
-Turret=no
-MaxDebris=0
-MinDebris=0
-ThreatPosed=0
-Unsellable=yes
-Powered=false
-BaseNormal=no
-ClickRepairable=no
-Repairable=no
-ImmuneToPsionics=yes
-BuildingDieSound=Dummy
-Drainable=no
-Trainable=no
-HasRadialIndicator=true
-Selectable=no
-Insignia.Veteran=dummy
-Insignia.Elite=dummy
-Insignificant=yes
-Chronoshift.Allow=no
-
 [LightningRodSpecial]
 RechargeTime=0.1
 SW.AlwaysGranted=yes
@@ -739,6 +670,14 @@ DefaultToGuardArea=no
 AttachEffect.Duration=8
 AttachEffect.Animation=CRANRING
 AttachEffect.Cumulative=yes
+
+[F_ERESB]
+Academy.Types=none
+
+[EliteReservesSpecial]
+Money.Amount=0
+RechargeTime=0.5
+SW.AuxBuildings=none
 
 [ZephyrBeaconSpecial]
 RechargeTime=0.1
@@ -6253,128 +6192,3 @@ AnimList=CONFLARE
 AffectsAllies=no
 AffectsEnemies=yes
 
-
-[AMWC]
-UIName=NOSTR:Tek Turret Deliever
-Name=Tek Turret Car
-Prerequisite=GAWEAP
-Owner=Europeans,UnitedStates,Pacific
-Strength=2000
-ProtectedDriver=yes
-Category=Support
-Armor=mcv
-IsTilter=yes
-TooBigToFitUnderBridge=false
-TechLevel=4
-Sight=10
-Speed=5
-CrateGoodie=no
-Crusher=yes
-Cost=2000
-Soylent=100
-Bounty.Value=50
-Bounty=yes
-Bounty.Display=yes
-Points=15
-ROT=5
-Turret=no
-Insignificant=yes
-IsSelectableCombatant=no
-AllowedToStartInMultiplayer=no
-Explosion=TWLT070,S_BANG48,S_BRNL58,S_CLSN58,S_TUMU60
-VoiceSelect=CivAllSelect
-VoiceMove=CivAllMove
-VoiceAttack=CivAllAttackCommand
-VoiceSpecialAttack=CivAllMove
-DieSound=GenVehicleDie
-MoveSound=CarMoveStart
-CrushSound=TankCrush
-Locomotor={4A582741-9839-11d1-B709-00A024DDAFD1}
-MovementZone=Normal
-ThreatPosed=10	
-DamageParticleSystems=SparkSys,SmallGreySSys
-Weight=2
-Accelerates=true
-SlowdownDistance=1
-AccelerationFactor=1
-DeaccelerationFactor=0
-ZFudgeColumn=8
-ZFudgeTunnel=13
-Size=3
-CanBeReversed=no
-EMP.Threshold=no
-Insignia.Veteran=dummy
-Insignia.Elite=dummy
-Trainable=no
-ImmuneToAbduction=yes
-DeploysInto=FTHQ
-DeploySound=ConstructionYardDeploy
-
-[FTHQ]
-Image=FAHQ
-Name=Fxxking Tower
-UIName=NOSTR:Tek Turret
-Primary=FTShot
-ElitePrimary=FTShotE
-Secondary=AeroblazeLaser
-EliteSecondary=AeroblazeLaserE
-VeteranAbilities=STRONGER
-EliteAbilities=SELF_HEAL,FIREPOWER
-AttachEffect.Duration=-1
-AttachEffect.ROFMultiplier=0.5
-BuildupTime=.12
-SellTime=.12
-TechLevel=-1
-Strength=2000
-Adjacent=2
-Points=60
-Sight=6
-Armor=concrete_b
-Explosion=TWLT070,S_BANG48,S_BRNL58,S_CLSN58,S_TUMU60,FLAMEGUY
-DebrisAnims=DBRIS1LG,DBRIS1SM,DBRIS2LG,DBRIS4LG,DBRIS4SM,DBRIS5LG,DBRIS5SM,DBRIS6LG,DBRIS6SM,DBRIS7LG
-MaxDebris=9
-MaxDebris=5
-Power=0
-Nominal=yes
-HalfDamageSmokeLocation1=0,0,0
-DamageSmokeOffset=410, 100, 165
-ThreatPosed=0
-Crewed=no
-Spyable=no
-AmbientSound=FutureTechHQLoop
-Chronoshift.Allow=no
-UndeploysInto=AMWC
-DeploySound=ConstructionYardUndeploy
-
-[FTShot]
-Damage=150
-ROF=25
-Range=20
-Speed=100
-Projectile=InvisibleHigh
-Warhead=ParadoxPrismWH
-LaserOuterSpread=255,255,255
-LaserInnerSpread=255,255,255
-LaserOuterColor=123,123,123
-LaserInnerColor=123,123,123
-LaserDuration=25
-IsLaser=true
-IsHouseColor=false
-Report=ParadoxPrismAttack
-
-
-[FTShotE]
-Damage=200
-ROF=20
-Range=22
-Speed=100
-Projectile=InvisibleHigh
-Warhead=ParadoxPrismWH
-LaserOuterSpread=255,255,255
-LaserInnerSpread=255,255,255
-LaserOuterColor=123,123,123
-LaserInnerColor=123,123,123
-LaserDuration=25
-IsLaser=true
-IsHouseColor=false
-Report=ParadoxPrismAttack
