--- a/INI/Map Code/Tweak Module/back warp.ini
+++ b/INI/Map Code/Tweak Module/back warp.ini
@@ -1,4 +1,4 @@
-; Backwarp Cluster Strike
+; Backwarp Cluster
 ;-demo:[BackwarpSpecial]SW.AlwaysGranted=yes
 ;-demo:[BackwarpSpecial]RechargeTime=0.1
 ;-demo:[BackwarpSpecial]Money.Amount=0
