--- a/INI/Map Code/Tweak Module/gear change.ini
+++ b/INI/Map Code/Tweak Module/gear change.ini
@@ -1,3 +1,4 @@
+;-demo:[NACNST]SuperWeapon=GearOverchargeSpecial
 [SuperWeaponTypes]
 48917=GearOverchargeSpecial
 
@@ -8,8 +9,8 @@ IsPowered=true
 RechargeTime=6
 Money.Amount=0
 Type=UnitDelivery
-Action=Custom
 ShowTimer=no
+Action=Custom
 SidebarPCX=ersvicon.pcx
 DisableableFromShell=no
 Range=0
@@ -23,8 +24,7 @@ Deliver.Types=G_G,G_G,G_G,G_G
 FlashSidebarTabFrames=0
 Text.Ready=NAME:ACTIVATE
 
-[NACNST]
-SuperWeapon=GearOverchargeSpecial
+
 
 [BuildingTypes]
 31678=G_G
