--- a/INI/Map Code/Custom Units/robotank.ini
+++ b/INI/Map Code/Custom Units/robotank.ini
@@ -7,6 +7,8 @@ UIName=NOSTR:Biu Biu Drone
 Name=bLinDMakErR
 Primary=TanyaLaser
 ElitePrimary=TanyaLaserE
+Secondary=MissileLauncher
+EliteSecondary=MissileLauncherE
 Prerequisite=ALLWEAP,GAMERC
 Strength=330
 Category=AFV
