--- a/INI/Map Code/Custom Units/USBoost.ini
+++ b/INI/Map Code/Custom Units/USBoost.ini
@@ -2,6 +2,79 @@
 7001=S_ROBO
 7002=S_COMA
 
+[Warheads]
+701=StormGunS_WH
+
+[WeaponTypes]
+5001=StormGun_S
+5002=StormGun_SE
+
+[StormGun_S]
+Damage=40
+ROF=18
+Range=8
+Projectile=InvisibleStorm
+Speed=100
+Report=StormchildLaser
+Warhead=StormGunS_WH
+Bright=no
+IsHouseColor=false
+LaserInnerColor=200,0,0
+LaserOuterColor=200,0,0
+LaserDuration=10
+IsLaser=true
+Burst=4
+Anim=LASMUZ
+
+[StormGun_SE]
+Damage=43
+ROF=15
+Range=9
+Projectile=InvisibleStorm
+Speed=100
+Report=StormchildLaser
+Warhead=StormGunS_WH
+Bright=no
+IsHouseColor=false
+LaserInnerColor=255,0,44
+LaserOuterColor=255,0,44
+LaserDuration=20
+IsLaser=true
+Burst=4
+Anim=LASMUZ
+
+[StormGunS_WH]
+Wall=yes
+Wood=yes
+CellSpread=.4
+PercentAtMax=1
+Verses=115%,105%,100%,70%70%,70%,60%,60%,60%,100%,100%
+Conventional=yes
+AnimList=XGRYSML1,XGRYSML2,EXPLOSML,XGRYMED1,XGRYMED2,EXPLOMED,EXPLOLRG,TWLT070
+CLDisableGreen=yes
+CLDisableBlue=yes
+InfDeath=4
+AnimList=S_CLSN16,S_CLSN22,S_CLSN30,S_CLSN42,S_CLSN58
+ProneDamage=50%
+;;jets weaker versus heroes
+Versus.tany=50%
+Versus.krukov=50%
+Versus.sieg=50%
+Versus.f_hero=50%
+Versus.c_hero=50%
+Versus.c_hero2=50%
+Versus.moral=50%
+Versus.yunru=50%
+Versus.libra=50%
+Versus.librc=50%
+Versus.under=50%
+Versus.rahn=50%
+Versus.sib_fin=50%
+Versus.sib_ali=50%
+Versus.eureka=50%
+
+
+
 [S_ROBO]
 Image=ROBO
 UIName=NOSTR:Biu Biu Drone
@@ -69,45 +142,18 @@ Weight=1
 IFVMode=2
 CanBeReversed=no
 EMP.Threshold=no
+AIBuildThis=yes
 
 [S_COMA]
 Image=COMA
 UIName=NOSTR:Biu Biu Bird
 Name=BliNdmAKeRW
 Prerequisite=ALLWEAP,GAMERC
-Primary=ComancheLaser
-ElitePrimary=ComancheLaserE
-Secondary=ComancheStrike
-EliteSecondary=ComancheStrikeE
-Ammo=4
-PipWrap=4
-Reload=3
-ReloadAmount=4
-EmptyReload=120
-PipScale=none
-BurstDelay0=2
-BurstDelay1=2
-BurstDelay2=2
-BurstDelay3=2
-Gattling.Cycle=yes
-IsGattling=yes
-TurretCount=1
-WeaponCount=4
-Weapon1=AbramsLaser
-EliteWeapon1=AbramsLaserE
-Weapon2=AbramsLaser
-EliteWeapon2=AbramsLaserE
-Weapon3=AthenaStrike
-EliteWeapon3=AthenaStrikeE
-Weapon4=AthenaStrike
-EliteWeapon4=AthenaStrikeE
-WeaponStages=2
-Stage1=100
-Stage2=160
-EliteStage1=100
-EliteStage2=160
-RateUp=1
-RateDown=250
+Primary=StormGun_S
+ElitePrimary=StormGun_SE
+Secondary=StormGun_S
+EliteSecondary=StormGun_SE
+OmniFire=yes
 Strength=300
 Category=AirPower
 JumpJet=yes
@@ -181,3 +227,4 @@ DeathWeaponDamageModifier=.02
 IronCurtain.Modifier=0
 Chronoshift.Allow=no
 CanBeReversed=no
+AIBuildThis=yes
