--- a/INI/Map Code/Custom Units/USBoost.ini
+++ b/INI/Map Code/Custom Units/USBoost.ini
@@ -1,6 +1,10 @@
 [VehicleTypes]
 7001=S_ROBO
 7002=S_COMA
+7003=STORMCREW
+
+[AircraftTypes]
+7003=S_STORM
 
 [Warheads]
 701=StormGunS_WH
@@ -8,10 +12,74 @@
 [WeaponTypes]
 5001=StormGun_S
 5002=StormGun_SE
+5003=TanyaLaser_S
+5004=TanyaLaser_SE
+
+[AthenaStrike_S]
+Damage=165
+ROF=300
+Range=15
+MinimumRange=3
+Speed=100
+Projectile=BasswaveP
+Warhead=AthenaStrikeWH
+RevealOnFire=no
+Anim=SW01,SW02,SW03,SW04,SW05,SW06,SW07,SW08,SW09,SW10,SW11,SW12,SW13,SW14,SW15,SW16,SW17,SW18,SW19,SW20,SW21,SW22,SW23,SW24,SW25,SW26,SW27,SW28,SW29,SW30,SW31,SW32
+Ammo=1
+
+[AthenaStrike_SE]
+Damage=165
+ROF=300
+Range=15
+MinimumRange=3
+Speed=100
+Projectile=BasswaveP
+Warhead=AthenaStrikeWH
+Bright=no
+RevealOnFire=no
+Anim=SW01,SW02,SW03,SW04,SW05,SW06,SW07,SW08,SW09,SW10,SW11,SW12,SW13,SW14,SW15,SW16,SW17,SW18,SW19,SW20,SW21,SW22,SW23,SW24,SW25,SW26,SW27,SW28,SW29,SW30,SW31,SW32
+Ammo=1
+
+[TanyaLaser_S]
+Damage=50
+ROF=18
+Range=8
+Projectile=InvisibleLaser
+Speed=100
+Report=TanyaAttack
+Warhead=TanyaLaserWH
+Bright=no
+IsHouseColor=false
+LaserInnerColor=200,0,0
+LaserOuterColor=200,0,0
+LaserDuration=15
+IsLaser=true
+IsBigLaser=false
+Anim=LASMUZ
+AssaultAnim=UCBLOOD
+
+[TanyaLaser_SE]
+Damage=52
+ROF=15
+Range=9
+Projectile=InvisibleLaser
+Speed=100
+Report=TanyaAttack
+Warhead=TanyaLaserWH
+Bright=yes
+IsHouseColor=false
+LaserInnerColor=255,0,44
+LaserOuterColor=255,0,44
+LaserDuration=20
+IsLaser=true
+IsBigLaser=false
+Anim=LASMUZ
+AssaultAnim=UCBLOOD
+
 
 [StormGun_S]
-Damage=40
-ROF=18
+Damage=42
+ROF=32
 Range=8
 Projectile=InvisibleStorm
 Speed=100
@@ -25,10 +93,12 @@ LaserDuration=10
 IsLaser=true
 Burst=4
 Anim=LASMUZ
+Ammo=-1
+OmniFire=yes
 
 [StormGun_SE]
-Damage=43
-ROF=15
+Damage=45
+ROF=35
 Range=9
 Projectile=InvisibleStorm
 Speed=100
@@ -42,13 +112,15 @@ LaserDuration=20
 IsLaser=true
 Burst=4
 Anim=LASMUZ
+Ammo=-1
+OmniFire=yes
 
 [StormGunS_WH]
 Wall=yes
 Wood=yes
 CellSpread=.4
 PercentAtMax=1
-Verses=115%,105%,100%,70%70%,70%,60%,60%,60%,100%,100%
+Verses=115%,105%,100%,45%45%,45%,35%,35%,35%,100%,100%
 Conventional=yes
 AnimList=XGRYSML1,XGRYSML2,EXPLOSML,XGRYMED1,XGRYMED2,EXPLOMED,EXPLOLRG,TWLT070
 CLDisableGreen=yes
@@ -79,12 +151,12 @@ Versus.eureka=50%
 Image=ROBO
 UIName=NOSTR:Biu Biu Drone
 Name=bLinDMakErR
-Primary=TanyaLaser
-ElitePrimary=TanyaLaserE
+Primary=TanyaLaser_S
+ElitePrimary=TanyaLaser_SE
 Secondary=MissileLauncher
 EliteSecondary=MissileLauncherE
 Prerequisite=ALLWEAP,GAMERC
-Strength=330
+Strength=335
 Category=AFV
 Armor=r_light
 Turret=yes
@@ -153,8 +225,7 @@ Primary=StormGun_S
 ElitePrimary=StormGun_SE
 Secondary=StormGun_S
 EliteSecondary=StormGun_SE
-OmniFire=yes
-Strength=300
+Strength=310
 Category=AirPower
 JumpJet=yes
 Armor=f_medium
@@ -228,3 +299,144 @@ IronCurtain.Modifier=0
 Chronoshift.Allow=no
 CanBeReversed=no
 AIBuildThis=yes
+
+[S_STORM]
+Image=STORM
+UIName=NOSTR:Biu Biu Jet
+Name=bLiNDmAkeRJ
+Prerequisite=GAAIRC
+PrerequisiteOverride=GAMERC
+Primary=AthenaStrike_S
+ElitePrimary=AthenaStrike_SE
+DeathWeapon=AircraftDeathWeapon
+NavalTargeting=5
+CanPassiveAquire=no
+CanRetaliate=no
+SlowdownDistance=1500
+Strength=200
+Category=AirPower
+Armor=f_jet
+CloakStop=yes
+TechLevel=5
+Sight=8
+ProtectedDriver=yes
+RadarInvisible=yes
+Landable=yes
+MoveToShroud=yes
+Dock=GAAIRC,NAAIR,GAHPAD,CAAIRP,YAAIRF,NASAIR
+PipScale=Ammo
+Speed=30
+PitchSpeed=1.1
+PitchAngle=0
+OmniFire=yes
+Owner=UnitedStates
+RequiredHouses=UnitedStates
+Cost=1200
+Soylent=600
+Bounty.Value=300
+Bounty=yes
+Bounty.Display=yes
+Points=25
+ROT=6
+Ammo=2
+Crewed=no
+ConsideredAircraft=yes
+AirportBound=yes
+GuardRange=30
+Explosion=TWLT070,S_BANG48,S_BRNL58,S_CLSN58,S_TUMU60
+MaxDebris=3
+IsSelectableCombatant=no
+VoiceSelect=StormchildSelect
+VoiceMove=StormchildMove
+VoiceAttack=StormchildAttackCommand
+VoiceSecondaryWeaponAttack=StormchildLaserCommand
+VoiceCrashing=StormchildDie
+MoveSound=IntruderMoveLoop
+CrashingSound=IntruderDie
+ImpactLandSound=GenAircraftCrash
+Locomotor={4A582746-9839-11d1-B709-00A024DDAFD1}
+MovementZone=Fly
+ThreatPosed=20
+DamageParticleSystems=SparkSys,SmallGreySSys
+AuxSound1=IntruderTakeOff
+AuxSound2=IntruderLanding
+VeteranAbilities=STRONGER
+EliteAbilities=SELF_HEAL,FIREPOWER,FASTER
+Fighter=yes
+AllowedToStartInMultiplayer=no
+PreventAttackMove=no
+SelfHealing=yes
+CanBeReversed=no
+Passengers.Allowed=STORMCREW
+Survivor.RookiePassengerChance=0%
+Survivor.VeteranPassengerChance=0%
+Survivor.ElitePassengerChance=0%
+Passengers=1
+InitialPayload.Types=STORMCREW
+InitialPayload.Nums=1
+SizeLimit=1
+
+[STORMCREW]
+Image=FAKEP
+UIName=Name:EMPTY
+Name=StOrMCrEW
+Primary=BulldogPainter
+Strength=10
+DontScore=yes
+Insignificant=yes
+Insignia.Rookie=dummy
+Insignia.Veteran=dummy
+Insignia.Elite=dummy
+ProtectedDriver=yes
+Category=Support
+Selectable=no
+Armor=addon
+AttachEffect.Animation=ADDONKILL
+AttachEffect.Duration=-1
+Turret=no
+MinDebris=0
+IsTilter=no
+Crusher=no
+Accelerates=false
+TooBigToFitUnderBridge=true
+TechLevel=11
+Sight=0
+CanPassiveAquire=yes
+Speed=1
+PitchSpeed=1.1
+JumpjetSpeed=10
+JumpjetClimb=10
+JumpjetCrash=10
+JumpJetAccel=10
+JumpjetTurnRate=10
+JumpjetHeight=10
+JumpjetWobbles=.01
+JumpjetDeviation=1
+CrateGoodie=no
+Bunkerable=no
+Cost=1
+Soylent=0
+Points=0
+ROT=99
+MaxDebris=0
+SpeedType=Hover
+Locomotor={92612C46-F71F-11d1-AC9F-006008055BB5}
+MovementZone=Fly
+ThreatPosed=0
+Accelerates=false
+ImmuneToVeins=yes
+Size=1
+OpportunityFire=yes
+AllowedToStartInMultiplayer=no
+PoweredUnit=no
+Trainable=no
+Weight=.5
+CanBeReversed=no
+VehicleThief.Allowed=no
+Parachute.Anim=DUMMY
+OmniCrushResistant=yes
+PixelSelectionBracketDelta=9999
+EVA.Lost=none
+CloakSound=none
+DecloakSound=none
+HunterSeeker.Ignore=yes
