--- a/INI/Map Code/Custom Units/Star Railgunner.ini
+++ b/INI/Map Code/Custom Units/Star Railgunner.ini
@@ -15,6 +15,9 @@
 1700        =             MidBlastWH
 1701        =             MidBlastEWH
 
+[Projectiles]
+700	=	MIDBowP
+
 [STAR]
 Image=RAIL
 UIName=NOSTR:STAR RailGunner
@@ -133,35 +136,47 @@ IsLaser=yes
 Bright=yes
 
 [DHANDMID]
-Image=DRACOD
+Image=ORCIN
 UIName=NOSTR:Ereshkigal's Hand Middle
 Name=Big Dxck
 Prerequisite=FOEWEAP,FANANO_B
+IsTilter=yes
+IsGattling=yes
+Gattling.Cycle=yes
+BurstDelay0=0
+BurstDelay1=0
+BurstDelay2=0
+BurstDelay3=0
+TurretCount=1
+Turret=yes
+TurretSpins=yes
+RadialFireSegments=8
+IgnoresFirestorm=yes
 WeaponCount=12
-Weapon1=RailguneerBlast
-EliteWeapon1=RailgunTowerBlast
-Weapon2=RailguneerBlast
-EliteWeapon2=RailgunTowerBlast
+Weapon1=MidBlast
+EliteWeapon1=MidBlastE
+Weapon2=MidBlast
+EliteWeapon2=MidBlastE
 Weapon3=LeviathanDroneBomb
 EliteWeapon3=MidBowE
-Weapon4=RailguneerBlast
-EliteWeapon4=RailgunTowerBlast
-Weapon5=RailguneerBlast
-EliteWeapon5=RailgunTowerBlast
-Weapon6=RailguneerBlast
-EliteWeapon6=RailgunTowerBlast
+Weapon4=MidBlast
+EliteWeapon4=MidBlastE
+Weapon5=MidBlast
+EliteWeapon5=MidBlastE
+Weapon6=MidBlast
+EliteWeapon6=MidBlastE
 Weapon7=LeviathanDroneBomb
 EliteWeapon7=MidBowE
-Weapon8=RailguneerBlast
-EliteWeapon8=RailgunTowerBlast
-Weapon9=RailguneerBlast
-EliteWeapon9=RailgunTowerBlast
-Weapon10=RailguneerBlast
-EliteWeapon10=RailgunTowerBlast
+Weapon8=MidBlast
+EliteWeapon8=MidBlastE
+Weapon9=MidBlast
+EliteWeapon9=MidBlastE
+Weapon10=MidBlast
+EliteWeapon10=MidBlastE
 Weapon11=LeviathanDroneBomb
 EliteWeapon11=MidBowE
-Weapon12=RailguneerBlast
-EliteWeapon12=RailgunTowerBlast
+Weapon12=MidBlast
+EliteWeapon12=MidBlastE
 WeaponStages=6
 Stage1=1
 Stage2=2
@@ -180,7 +195,7 @@ RateDown=1
 DeathWeapon=BlimpBombEffect
 DeathWeaponDamageModifier=.15
 TargetLaser=yes
-Strength=2000
+Strength=3000
 Category=AirPower
 Armor=f_gotter
 TechLevel=10
@@ -248,13 +263,18 @@ GroupAs=Thors
 CanBeReversed=no
 Chronoshift.Crushable=no
 BuildLimit=1
+AttachEffect.Animation=MADLOOP
+AttachEffect.Duration=-1
+AttachEffect.TemporalHidesAnim=yes
+AttachEffect.PenetratesIronCurtain=yes
+
 
 [LeviathanDroneBomb]
 Damage=60
 ROF=1
 Range=11
 Burst=4
-Projectile=LeviPilesP
+Projectile=MIDBowP
 Speed=20
 Warhead=LeviWH
 Anim=TARCTRAI
@@ -268,8 +288,8 @@ Bright=no
 Damage=75
 ROF=1
 Range=12
-Burst=5
-Projectile=LeviPilesP
+Burst=4
+Projectile=MIDBowP
 Speed=20
 Warhead=LeviWH
 Anim=TARCTRAI
@@ -285,7 +305,7 @@ AmbientDamage=0
 ROF=1
 Range=11
 Speed=100
-Projectile=InvisibleMedium
+Projectile=InvisibleAll
 Warhead=MidBlastWH
 IsDetachedRailgun=true
 AttachedParticleSystem=PlasmaRailgunSys
@@ -298,6 +318,7 @@ LaserOuterColor=92,235,175
 LaserOuterSpread=0,0,0
 LaserDuration=12
 IsLaser=yes
+OmniFire=yes
 
 [MidBlastE]
 Damage=125
@@ -305,7 +326,7 @@ AmbientDamage=0
 ROF=1
 Range=12
 Speed=100
-Projectile=InvisibleHigh
+Projectile=InvisibleAll
 Warhead=MidBlastEWH
 UseSparkParticles=yes
 AttachedParticleSystem=PlasmaRailgunSys
@@ -318,6 +339,7 @@ LaserOuterSpread=0,0,0
 LaserDuration=15
 IsLaser=yes
 Anim=RAILTMUZ
+OmniFire=yes
 
 [MidBlastWH]
 Wall=yes
@@ -416,3 +438,29 @@ Bright=yes
 CombatLightSize=50%
 CLDisableRed=yes
 CLDisableBlue=yes
+
+[MIDBowP]
+Arm=2
+Shadow=no
+Proximity=no
+Ranged=yes
+AA=no
+AG=yes
+Image=TARCPROJ
+ROT=100
+SubjectToCliffs=no
+SubjectToElevation=no
+SubjectToWalls=no
+Acceleration=30
+FlakScatter=yes
+High=yes
+BallisticScatter.Min=2
+BallisticScatter.Max=2.5
+RetargetAccuracy=0.8
+Airburst=yes
+AirburstSpread=3
+AirburstWeapon=UraganFragment
+Cluster=2
+Splits=yes
+DetonationAltitude=10000
+CourseLockDuration=1
