--- a/INI/Map Code/Custom Units/Star Railgunner.ini
+++ b/INI/Map Code/Custom Units/Star Railgunner.ini
@@ -328,7 +328,7 @@ Range=12
 Speed=100
 Projectile=InvisibleAll
 Warhead=MidBlastEWH
-UseSparkParticles=yes
+IsDetachedRailgun=true
 AttachedParticleSystem=PlasmaRailgunSys
 Bright=yes
 Report=RailgunTowerAttack
