Special Unit Mid fixed

--- a/INI/Map Code/Custom Units/Star Railgunner.ini
+++ b/INI/Map Code/Custom Units/Star Railgunner.ini
@@ -1,3 +1,30 @@
+;-demo:[SuperWeaponTypes]14682=MidSpecial
+;-demo:[MidSpecial]UIName=NOSTR:MID
+;-demo:[MidSpecial]Name=Unit Deliver
+;-demo:[MidSpecial]IsPowered=no
+;-demo:[MidSpecial]RechargeTime=0.01
+;-demo:[MidSpecial]Type=UnitDelivery
+;-demo:[MidSpecial]Action=Custom
+;-demo:[MidSpecial]SidebarPCX=orcnicon.pcx
+;-demo:[MidSpecial]ShowTimer=no
+;-demo:[MidSpecial]DisableableFromShell=no
+;-demo:[MidSpecial]Range=1.5
+;-demo:[MidSpecial]LineMultiplier=0
+;-demo:[MidSpecial]Cursor=WarpIn
+;-demo:[MidSpecial]NoCursor=NoWarpIn
+;-demo:[MidSpecial]EVA.Ready=EVA_ReinforcementsReady
+;-demo:[MidSpecial]SW.RequiresTarget=none
+;-demo:[MidSpecial]SW.Animation=CHRONOTG
+;-demo:[MidSpecial]SW.AnimationHeight=1
+;-demo:[MidSpecial]SW.Sound=ChronosphereMoveQuiet
+;-demo:[MidSpecial]SW.FireIntoShroud=no
+;-demo:[MidSpecial]SW.AITargeting=none
+;-demo:[MidSpecial]Deliver.Types=DHANDMID
+;-demo:[MidSpecial]SW.CreateRadarEvent=no
+;-demo:[MidSpecial]FlashSidebarTabFrames=0
+;-demo:[MidSpecial]SW.AlwaysGranted=yes
+
+
 [InfantryTypes]
 700	=	STAR
 
@@ -139,7 +166,7 @@ Bright=yes
 Image=ORCIN
 UIName=NOSTR:Ereshkigal's Hand Middle
 Name=Big Dxck
-Prerequisite=FOEWEAP,FANANO_B
+Prerequisite=FOEWEAP
 IsTilter=yes
 IsGattling=yes
 Gattling.Cycle=yes
@@ -327,8 +354,9 @@ ROF=1
 Range=12
 Speed=100
 Projectile=InvisibleAll
-Warhead=MidBlastEWH
-UseSparkParticles=yes
+Warhead=MidBlastWH
+; UseSparkParticles=yes
+IsDetachedRailgun=true
 AttachedParticleSystem=PlasmaRailgunSys
 Bright=yes
 Report=RailgunTowerAttack
